Add config class and use it when necessary, apart from changing the examples

--- a/examples/mixed_logit_correlated_example.ipynb
+++ b/examples/mixed_logit_correlated_example.ipynb
@@ -13,7 +13,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -27,12 +44,12 @@
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -79,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -446,7 +463,7 @@
               "[6768 rows x 29 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -482,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -836,7 +853,7 @@
               "[20304 rows x 23 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -870,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "id": "MsSu2jqKeoz-"
       },
@@ -903,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -913,149 +930,35 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-07-14 00:28:27,682 INFO jaxlogit.mixed_logit: Starting data preparation, including generation of 1500 random draws for each random variable and observation.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:2025-07-14 00:28:27,788:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "2025-07-14 00:28:27,788 INFO jax._src.xla_bridge: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "2025-07-14 00:28:30,020 INFO jaxlogit.mixed_logit: Data contains 752 panels, using segment_sum for panel-wise log-likelihood.\n",
-            "2025-07-14 00:28:30,022 INFO jaxlogit.mixed_logit: Shape of draws: (6768, 1, 1500), number of draws: 1500\n",
-            "2025-07-14 00:28:30,022 INFO jaxlogit.mixed_logit: Shape of Xdf: (6768, 2, 3), shape of Xdr: (6768, 2, 1)\n",
-            "2025-07-14 00:28:30,023 INFO jaxlogit.mixed_logit: Compiling log-likelihood function.\n",
-            "2025-07-14 00:28:30,379 INFO jaxlogit.mixed_logit: Compilation finished, init neg_loglike = 6260.71, params= [(np.str_('ASC_CAR'), Array(0.1, dtype=float64)), (np.str_('ASC_TRAIN'), Array(0.1, dtype=float64)), (np.str_('CO'), Array(0.1, dtype=float64)), (np.str_('TT'), Array(0.1, dtype=float64)), (np.str_('sd.TT'), Array(0.1, dtype=float64))]\n",
-            "2025-07-14 00:28:30,380 INFO jaxlogit._optimize: Running minimization with method trust-region\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Loss on this step: 6260.709404860119, Loss on the last accepted step: 0.0, Step size: 1.0\n",
-            "Loss on this step: 205471.97895501574, Loss on the last accepted step: 6260.709404860119, Step size: 0.25\n",
-            "Loss on this step: 123910.46308477379, Loss on the last accepted step: 6260.709404860119, Step size: 0.0625\n",
-            "Loss on this step: 45412.46942728786, Loss on the last accepted step: 6260.709404860119, Step size: 0.015625\n",
-            "Loss on this step: 13605.640755086313, Loss on the last accepted step: 6260.709404860119, Step size: 0.00390625\n",
-            "Loss on this step: 5957.889047455692, Loss on the last accepted step: 6260.709404860119, Step size: 0.00390625\n",
-            "Loss on this step: 4662.3115816798545, Loss on the last accepted step: 5957.889047455692, Step size: 0.00390625\n",
-            "Loss on this step: 4515.065009751052, Loss on the last accepted step: 4662.3115816798545, Step size: 0.00390625\n",
-            "Loss on this step: 4418.413802576902, Loss on the last accepted step: 4515.065009751052, Step size: 0.00390625\n",
-            "Loss on this step: 4389.384110953944, Loss on the last accepted step: 4418.413802576902, Step size: 0.00390625\n",
-            "Loss on this step: 4377.098985190866, Loss on the last accepted step: 4389.384110953944, Step size: 0.00390625\n",
-            "Loss on this step: 4373.926044373106, Loss on the last accepted step: 4377.098985190866, Step size: 0.00390625\n",
-            "Loss on this step: 4371.779481785483, Loss on the last accepted step: 4373.926044373106, Step size: 0.013671875\n",
-            "Loss on this step: 4366.492515493317, Loss on the last accepted step: 4371.779481785483, Step size: 0.0478515625\n",
-            "Loss on this step: 4360.161373732613, Loss on the last accepted step: 4366.492515493317, Step size: 0.0478515625\n",
-            "Loss on this step: 4362.033781606105, Loss on the last accepted step: 4360.161373732613, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.67098472254, Loss on the last accepted step: 4360.161373732613, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.52081671587, Loss on the last accepted step: 4359.67098472254, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.383365221588, Loss on the last accepted step: 4359.52081671587, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.340744025679, Loss on the last accepted step: 4359.383365221588, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.308053058353, Loss on the last accepted step: 4359.340744025679, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.2915105652755, Loss on the last accepted step: 4359.308053058353, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.276723927937, Loss on the last accepted step: 4359.2915105652755, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.267217623234, Loss on the last accepted step: 4359.276723927937, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.259123856867, Loss on the last accepted step: 4359.267217623234, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.252466426083, Loss on the last accepted step: 4359.259123856867, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.246705654759, Loss on the last accepted step: 4359.252466426083, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.242234524502, Loss on the last accepted step: 4359.246705654759, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.238538729163, Loss on the last accepted step: 4359.242234524502, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.235563628431, Loss on the last accepted step: 4359.238538729163, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.233015296204, Loss on the last accepted step: 4359.235563628431, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.2309310802575, Loss on the last accepted step: 4359.233015296204, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.229157559059, Loss on the last accepted step: 4359.2309310802575, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.227697662638, Loss on the last accepted step: 4359.229157559059, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.226439530054, Loss on the last accepted step: 4359.227697662638, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.225390392276, Loss on the last accepted step: 4359.226439530054, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.224480539513, Loss on the last accepted step: 4359.225390392276, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.223697755336, Loss on the last accepted step: 4359.224480539513, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.223017311219, Loss on the last accepted step: 4359.223697755336, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.2224251944235, Loss on the last accepted step: 4359.223017311219, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.221909899941, Loss on the last accepted step: 4359.2224251944235, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.221461800153, Loss on the last accepted step: 4359.221909899941, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.221073190444, Loss on the last accepted step: 4359.221461800153, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.220738093535, Loss on the last accepted step: 4359.221073190444, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.2204528006605, Loss on the last accepted step: 4359.220738093535, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.220216767542, Loss on the last accepted step: 4359.2204528006605, Step size: 0.011962890625\n",
-            "Loss on this step: 4359.220034326255, Loss on the last accepted step: 4359.220216767542, Step size: 0.0418701171875\n",
-            "Loss on this step: 4359.219642556484, Loss on the last accepted step: 4359.220034326255, Step size: 0.14654541015625\n",
-            "Loss on this step: 4359.21927688961, Loss on the last accepted step: 4359.219642556484, Step size: 0.512908935546875\n",
-            "Loss on this step: 4359.218748627567, Loss on the last accepted step: 4359.21927688961, Step size: 0.512908935546875\n",
-            "Loss on this step: 4359.233074478111, Loss on the last accepted step: 4359.218748627567, Step size: 0.12822723388671875\n",
-            "Loss on this step: 4359.218710219622, Loss on the last accepted step: 4359.218748627567, Step size: 0.12822723388671875\n",
-            "Loss on this step: 4359.224276517987, Loss on the last accepted step: 4359.218710219622, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218475291207, Loss on the last accepted step: 4359.218710219622, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.21834069685, Loss on the last accepted step: 4359.218475291207, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218265088024, Loss on the last accepted step: 4359.21834069685, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218254357514, Loss on the last accepted step: 4359.218265088024, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218233036163, Loss on the last accepted step: 4359.218254357514, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218231633901, Loss on the last accepted step: 4359.218233036163, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.218231000706, Loss on the last accepted step: 4359.218231633901, Step size: 0.03205680847167969\n",
-            "Loss on this step: 4359.2182308188285, Loss on the last accepted step: 4359.218231000706, Step size: 0.1121988296508789\n",
-            "Loss on this step: 4359.218230376182, Loss on the last accepted step: 4359.2182308188285, Step size: 0.39269590377807617\n",
-            "Loss on this step: 4359.218229297612, Loss on the last accepted step: 4359.218230376182, Step size: 0.39269590377807617\n",
-            "Loss on this step: 4359.218229256631, Loss on the last accepted step: 4359.218229297612, Step size: 0.39269590377807617\n",
-            "Loss on this step: 4359.218229275025, Loss on the last accepted step: 4359.218229256631, Step size: 0.09817397594451904\n",
-            "Loss on this step: 4359.218229243382, Loss on the last accepted step: 4359.218229256631, Step size: 0.09817397594451904\n",
-            "Loss on this step: 4359.2182292405305, Loss on the last accepted step: 4359.218229243382, Step size: 0.09817397594451904\n",
-            "Loss on this step: 4359.218229239384, Loss on the last accepted step: 4359.2182292405305, Step size: 0.09817397594451904\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-07-14 00:28:45,081 INFO jaxlogit.mixed_logit: Optimization finished, success = True, final loglike = -4359.22, final gradient max = 7.47e-05, norm = 6.75e-04.\n",
-            "2025-07-14 00:28:45,082 INFO jaxlogit.mixed_logit: Calculating gradient of individual log-likelihood contributions\n",
-            "2025-07-14 00:28:47,782 INFO jaxlogit.mixed_logit: Calculating H_inv\n",
-            "2025-07-14 00:28:50,386 INFO jaxlogit._choice_model: Post fit processing\n",
-            "2025-07-14 00:28:51,335 INFO jaxlogit._choice_model: Optimization terminated successfully.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: \n",
-            "    Iterations: 60\n",
-            "    Function evaluations: 68\n",
-            "Estimation time= 23.6 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "ASC_CAR                 0.2831110     0.0560480     5.0512276       4.5e-07 ***\n",
-            "ASC_TRAIN              -0.5722733     0.0794778    -7.2004140      6.65e-13 ***\n",
-            "CO                     -1.6601666     0.0778870   -21.3150710      1.26e-97 ***\n",
-            "TT                     -3.2289976     0.1749805   -18.4534737      3.16e-74 ***\n",
-            "sd.TT                   3.6221628     0.1728452    20.9561137      1.58e-94 ***\n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -4359.218\n",
-            "AIC= 8728.436\n",
-            "BIC= 8762.536\n"
+          "ename": "ValueError",
+          "evalue": "maximum supported dimension for an ndarray is currently 64, found 20304",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[16], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m varnames\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mASC_CAR\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mASC_TRAIN\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCO\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTT\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m model \u001b[38;5;241m=\u001b[39m MixedLogit()\n\u001b[1;32m      4\u001b[0m config \u001b[38;5;241m=\u001b[39m ConfigData(\n\u001b[1;32m      5\u001b[0m     n_draws\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1500\u001b[39m, \n\u001b[0;32m----> 6\u001b[0m     avail\u001b[38;5;241m=\u001b[39m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAV\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[1;32m      7\u001b[0m     panels\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mndarray(df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m\"\u001b[39m]),\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m res \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit(\n\u001b[1;32m     11\u001b[0m     df[varnames],\n\u001b[1;32m     12\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCHOICE\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     17\u001b[0m     config\n\u001b[1;32m     18\u001b[0m )\n\u001b[1;32m     19\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
+            "\u001b[0;31mValueError\u001b[0m: maximum supported dimension for an ndarray is currently 64, found 20304"
           ]
         }
       ],
       "source": [
         "varnames=['ASC_CAR', 'ASC_TRAIN', 'CO', 'TT']\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    n_draws=1500, \n",
+        "    avail=(df['AV']),\n",
+        "    panels=(df[\"ID\"]),\n",
+        ")\n",
+        "\n",
         "res = model.fit(\n",
-        "    X=df[varnames],\n",
-        "    y=df['CHOICE'],\n",
-        "    varnames=varnames,\n",
-        "    alts=df['alt'],\n",
-        "    ids=df['custom_id'],\n",
-        "    avail=df['AV'],\n",
-        "    panels=df[\"ID\"],\n",
-        "    randvars={'TT': 'n'},\n",
-        "    n_draws=1500,\n",
+        "    df[varnames],\n",
+        "    df['CHOICE'],\n",
+        "    varnames,\n",
+        "    df['alt'],\n",
+        "    df['custom_id'],\n",
+        "    {'TT': 'n'},\n",
+        "    config\n",
         ")\n",
         "model.summary()"
       ]
@@ -1069,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1079,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1240,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1360,7 +1263,7 @@
         "    'ASC_SM': 0.0, 'sd.ASC_TRAIN': 1.0, 'sd.ASC_CAR': 0.0,\n",
         "    'chol.ASC_CAR.ASC_TRAIN': 0.0, 'chol.ASC_CAR.ASC_SM': 0.0\n",
         "}  # Identification of error components, see J. Walker's PhD thesis (MIT 2001)\n",
-        "\n",
+        "config = DataConfig()\n",
         "model = MixedLogit()\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
@@ -1394,7 +1297,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "venv (3.10.12)",
       "language": "python",
       "name": "python3"
     },
