Update examples to use config data when fitting

--- a/examples/swissmetro_biogeme.ipynb
+++ b/examples/swissmetro_biogeme.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9f09242f",
    "metadata": {
     "execution": {
@@ -23,7 +23,17 @@
      "shell.execute_reply.started": "2025-07-08T20:00:27.562754Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:2025-12-04 13:53:20,013:jax._src.xla_bridge:794: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+      "/home/tylerunix/jaxlogit/venv/lib/python3.10/site-packages/tqdm_joblib/__init__.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -465,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ced142a1",
    "metadata": {},
    "outputs": [],
@@ -474,7 +484,7 @@
     "\n",
     "import jax\n",
     "\n",
-    "from jaxlogit.mixed_logit import MixedLogit\n",
+    "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
     "from jaxlogit.utils import wide_to_long\n",
     "\n",
     "#  64bit precision\n",
@@ -513,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "55e63337",
    "metadata": {},
    "outputs": [
@@ -655,15 +665,10 @@
     "do_panel = True\n",
     "\n",
     "model = MixedLogit()\n",
-    "res = model.fit(\n",
-    "    X=df_jxl[varnames],\n",
-    "    y=df_jxl['CHOICE'],\n",
-    "    varnames=varnames,\n",
-    "    alts=df_jxl['alt'],\n",
-    "    ids=df_jxl['custom_id'],\n",
+    "\n",
+    "config = ConfigData(\n",
     "    avail=df_jxl['AV'],\n",
     "    panels=None if do_panel is False else df_jxl[\"ID\"],\n",
-    "    randvars=randvars,\n",
     "    n_draws=1000,\n",
     "    fixedvars=fixedvars,\n",
     "    init_coeff=None,\n",
@@ -671,6 +676,16 @@
     "    optim_method='trust-region',\n",
     "    skip_std_errs=False,\n",
     "    force_positive_chol_diag=False,  # not using softplus for std devs here for comparability with biogeme\n",
+    ")\n",
+    "\n",
+    "res = model.fit(\n",
+    "    X=df_jxl[varnames],\n",
+    "    y=df_jxl['CHOICE'],\n",
+    "    varnames=varnames,\n",
+    "    alts=df_jxl['alt'],\n",
+    "    ids=df_jxl['custom_id'],\n",
+    "    randvars=randvars,\n",
+    "    config=config\n",
     ")\n",
     "model.summary()"
    ]
@@ -686,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.10.12)",
    "language": "python",
    "name": "python3"
   },
