--- a/examples/mixed_logit_model_xlogit_example.ipynb
+++ b/examples/mixed_logit_model_xlogit_example.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -25,7 +25,7 @@
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
@@ -901,7 +901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1056,16 +1056,21 @@
       "source": [
         "varnames=['ASC_CAR', 'ASC_TRAIN', 'CO', 'TT']\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    avail=df['AV'],\n",
+        "    panels=df[\"ID\"],\n",
+        "    n_draws=1500,\n",
+        ")\n",
+        "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['CHOICE'],\n",
         "    varnames=varnames,\n",
         "    alts=df['alt'],\n",
         "    ids=df['custom_id'],\n",
-        "    avail=df['AV'],\n",
-        "    panels=df[\"ID\"],\n",
         "    randvars={'TT': 'n'},\n",
-        "    n_draws=1500,\n",
+        "    config=config\n",
         ")\n",
         "model.summary()"
       ]
@@ -1356,7 +1361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1567,22 +1572,27 @@
       "source": [
         "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    n_draws=600,\n",
+        "    panels=df['id'],\n",
+        ")\n",
+        "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    ids=df['chid'],\n",
-        "    panels=df['id'],\n",
         "    alts=df['alt'],\n",
-        "    n_draws=600,\n",
-        "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
+        "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
+        "    config=config\n",
         ")\n",
         "model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1800,16 +1810,21 @@
         "# Note the sd. variables in jaxlogit are softplus transformed by default such that they are always positive. To compare these to xlogits results at https://github.com/arteagac/xlogit/blob/master/examples/mixed_logit_model.ipynb\n",
         "# use jax.nn.softplus(params) for non-asserted sd. params. Or run w/o softplus:\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    force_positive_chol_diag=False,\n",
+        "    panels=df['id'],\n",
+        "    n_draws=600,\n",
+        ")\n",
+        "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    ids=df['chid'],\n",
-        "    panels=df['id'],\n",
         "    alts=df['alt'],\n",
-        "    n_draws=600,\n",
         "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
-        "    force_positive_chol_diag=False,\n",
+        "    config=config\n",
         ")\n",
         "model.summary()"
       ]
@@ -2260,14 +2275,19 @@
       "source": [
         "varnames = ['price', 'catch']\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    n_draws=2000,  # Note using 1000 draws here leads to sd.catch going to zero, need more draws to find minimum at positive stddev\n",
+        ")\n",
+        "\n",
         "model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    alts=df['alt'],\n",
         "    ids=df['id'],\n",
-        "    n_draws=2000,  # Note using 1000 draws here leads to sd.catch going to zero, need more draws to find minimum at positive stddev\n",
         "    randvars={'price': 'n', 'catch': 'n'},\n",
+        "    config=config\n",
         ")\n",
         "model.summary()"
       ]
@@ -2613,7 +2633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2837,15 +2857,20 @@
       "source": [
         "varnames = ['hiperf', 'medhiperf', 'price', 'opcost', 'range', 'ev', 'hybrid'] \n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    n_draws = 1000,\n",
+        "    panels=df['person_id'],\n",
+        ")\n",
+        "\n",
         "model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    alts=df['alt'],\n",
         "    ids=df['choice_id'],\n",
-        "    panels=df['person_id'],\n",
         "    randvars = {'price': 'ln', 'opcost': 'n',  'range': 'ln', 'ev':'n', 'hybrid': 'n'}, \n",
-        "    n_draws = 1000,\n",
+        "    config=config\n",
         ")\n",
         "model.summary()"
       ]
@@ -2906,7 +2931,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "venv (3.10.12)",
       "language": "python",
       "name": "python3"
     },
